--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   simple_toast_message: ^0.0.5
+  line_icons: ^2.0.3
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
